# greybox

./: .Rbuildignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  cran-comments.md
python/: MANIFEST.in  Makefile  NEWS  PROJECT_STATUS.md  README.md  pyproject.toml  setup.cfg  setup.py
python/docs/: conf.py  index.rst
python/docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
python/docs/_build/.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
python/docs/_build/.doctrees/api/: alm.doctree  association.doctree  distributions.doctree  formula.doctree  index.doctree  measures.doctree  quantile_measures.doctree  selection.doctree  xreg.doctree
python/docs/_build/_modules/: index.html
python/docs/_build/_modules/greybox/: alm.html  formula.html  hm.html  measures.html  quantile_measures.html  selection.html  xreg.html
python/docs/_build/_modules/greybox/distributions/: beta.html  fnorm.html  gamma.html  geom.html  gnorm.html  helper.html  lnorm.html  logitnorm.html  ls.html  t.html
python/docs/_build/_sources/: index.rst.txt  installation.rst.txt
python/docs/_build/_sources/api/: alm.rst.txt  index.rst.txt  quantile_measures.rst.txt
python/docs/_build/api/: alm.html  association.html  distributions.html  formula.html  hm.html  index.html  measures.html  quantile_measures.html  selection.html  transforms.html  xreg.html
python/docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
python/docs/_build/html/.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
python/docs/_build/html/.doctrees/api/: aid.doctree  alm.doctree  association.doctree  distributions.doctree  error_measures.doctree  formula.doctree  hm.doctree  index.doctree  point_measures.doctree  quantile_measures.doctree  rolling.doctree  selection.doctree  smoothers.doctree  stick.doctree  transforms.doctree  xreg.doctree
python/docs/_build/html/.doctrees/api/distributions/: alaplace.doctree  bcnorm.doctree  beta.doctree  binom.doctree  chi2.doctree  exp.doctree  fnorm.doctree  gamma.doctree  geom.doctree  gnorm.doctree  invgauss.doctree  laplace.doctree  lgnorm.doctree  llaplace.doctree  lnorm.doctree  logis.doctree  logitnorm.doctree  ls.doctree  nbinom.doctree  norm.doctree  pois.doctree  rectnorm.doctree  s.doctree  t.doctree
python/docs/_build/html/.doctrees/distributions/: index.doctree
python/docs/_build/html/_modules/: index.html
python/docs/_build/html/_modules/greybox/: aid.html  alm.html  association.html  formula.html  hm.html  point_measures.html  quantile_measures.html  rolling.html  selection.html  smoothers.html  stick.html  transforms.html  xreg.html
python/docs/_build/html/_modules/greybox/distributions/: alaplace.html  bcnorm.html  beta.html  binom.html  chi2.html  exp.html  fnorm.html  gamma.html  geom.html  gnorm.html  helper.html  invgauss.html  laplace.html  lgnorm.html  llaplace.html  lnorm.html  logis.html  logitnorm.html  ls.html  nbinom.html  pois.html  rectnorm.html  s.html  t.html
python/docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
python/docs/_build/html/_sources/api/: alm.rst.txt  association.rst.txt  distributions.rst.txt  formula.rst.txt  hm.rst.txt  index.rst.txt  rolling.rst.txt  smoothers.rst.txt  stick.rst.txt  xreg.rst.txt
python/docs/_build/html/_sources/api/distributions/: alaplace.rst.txt  beta.rst.txt  binom.rst.txt  chi2.rst.txt  gnorm.rst.txt  invgauss.rst.txt  laplace.rst.txt  lgnorm.rst.txt  logis.rst.txt  ls.rst.txt  nbinom.rst.txt  norm.rst.txt  s.rst.txt
python/docs/_build/html/api/: aid.html  alm.html  association.html  distributions.html  error_measures.html  formula.html  hm.html  index.html  point_measures.html  quantile_measures.html  rolling.html  selection.html  smoothers.html  stick.html  transforms.html  xreg.html
python/docs/_build/html/api/distributions/: alaplace.html  bcnorm.html  beta.html  binom.html  chi2.html  exp.html  fnorm.html  gamma.html  geom.html  gnorm.html  invgauss.html  laplace.html  lgnorm.html  llaplace.html  lnorm.html  logis.html  logitnorm.html  ls.html  nbinom.html  norm.html  pois.html  rectnorm.html  s.html  t.html
python/docs/_build/html/distributions/: index.html
python/docs/api/: aid.rst  distributions.rst  error_measures.rst  index.rst  measures.rst  point_measures.rst  selection.rst  smoothers.rst  transforms.rst  xreg.rst
python/docs/api/distributions/: bcnorm.rst  exp.rst  fnorm.rst  gamma.rst  geom.rst  llaplace.rst  lnorm.rst  logitnorm.rst  pois.rst  rectnorm.rst  t.rst
python/docs/distributions/: index.rst
python/src/greybox/: __init__.py  aid.py  alm.py  association.py  cost_function.py  data.py  diagnostics.py  error_measures.py  fitters.py  formula.py  hm.py  measures.py  point_measures.py  pointlik.py  predict.py  quantile_measures.py  rmcb.py  rolling.py  selection.py  smoothers.py  stick.py  transforms.py  xreg.py
python/src/greybox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/greybox/_native/: lowess.cpp  supsmu.cpp
python/src/greybox/distributions/: __init__.py  alaplace.py  bcnorm.py  beta.py  binom.py  chi2.py  exp.py  fnorm.py  gamma.py  geom.py  gnorm.py  helper.py  invgauss.py  laplace.py  lgnorm.py  llaplace.py  lnorm.py  logis.py  logitnorm.py  ls.py  nbinom.py  pois.py  rectnorm.py  s.py  t.py
python/src/greybox/methods/: __init__.py  summary.py
python/tests/: __init__.py  conftest.py  test_aid.py  test_aid_compare.py  test_alm.py  test_alm_distributions_compare.py  test_diagnostics_compare.py  test_distributions.py  test_dynamic_stuff.py  test_fitters.py  test_measures.py  test_package.py  test_pointlik_compare.py  test_quality.py  test_r_python_compare.py  test_rmcb.py  test_rolling.py  test_selection.py  test_stick.py  test_transforms.py  test_xreg.py
(+156 files in other folders)
