[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "greybox"
version = "1.0.4"
description = "Toolbox for model building and forecasting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "LGPL-2.1"}
authors = [
    {name = "Ivan Svetunkov", email = "ivan@svetunkov.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "nlopt>=2.7.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black",
    "ruff",
    "pandas>=1.3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Homepage = "https://github.com/config-i1/greybox"
Repository = "https://github.com/config-i1/greybox"
Documentation = "https://config-i1.github.io/greybox/"
Issues = "https://github.com/config-i1/greybox/issues"

[tool.setuptools.package-data]
greybox = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.__pycache__*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ----------------------------------------------------------------------------
# cibuildwheel — produces binary wheels for each (OS, Python) combination.
# Invoked by the GitHub Actions release workflow; settings below are picked
# up from the package directory because the workflow runs cibuildwheel from
# python/.
# ----------------------------------------------------------------------------
[tool.cibuildwheel]
# Python interpreters to build wheels for. PyPy is skipped (nlopt has no
# PyPy wheels), 32-bit Linux/Windows are also skipped to keep the matrix
# focused on common targets.
build = "cp311-* cp312-* cp313-* cp314-*"
skip = [
    "*-musllinux_*",         # Alpine wheels — skip until there's demand
    "*_i686",                # 32-bit Linux
    "*-win32",               # 32-bit Windows
    # ``nlopt`` (a runtime dep) does not yet ship cp314 wheels for macOS
    # Intel on PyPI — only 2.4.x / 2.6.2 are visible to cp314-macosx_x86_64,
    # so the post-build test "pip install greybox-1.0.4-cp314-...whl" fails
    # with "No matching distribution found for nlopt>=2.7.0". The wheel
    # itself builds fine; users just couldn't install it. Drop until
    # upstream nlopt publishes a cp314 macOS Intel wheel. cp314 macOS
    # arm64 (Apple Silicon) is unaffected — nlopt ships wheels for it.
    "cp314-macosx_x86_64",
]
build-verbosity = 1

# Smoke-test each built wheel by importing the native modules and exercising
# them end-to-end through aid() (which uses both lowess and supsmu).
test-requires = ["pytest"]
test-command = "pytest {package}/tests/test_aid.py -q"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Ensure compiled wheels remain importable on older macOS versions.
environment = { MACOSX_DEPLOYMENT_TARGET = "10.13" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
